docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/pss_baseline/allowed_empty.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-seccomp-allowed
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        seccompProfile:
          type: ""
