docs/NewStructure_admin/2. Установка и сопровождение/8. Безопасность платформы/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-seccomp-profiles
tests:
  - name: pod-security-standards-baseline
    template: ../../templates/security/allowed-seccomp.yaml
    constraint: constraint_pss_baseline.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed-empty
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed_empty.yaml
        assertions:
          - violations: no
      - name: example-allowed-localhost
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed_localhost.yaml
        assertions:
          - violations: no
      - name: example-allowed-undefined
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/allowed_undefined.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/disallowed.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-ephemeral
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_baseline/disallowed_ephemeral.yaml
        assertions:
          - violations: yes

  - name: pod-security-standards-restricted.yaml
    template: ../../templates/security/allowed-seccomp.yaml
    constraint: constraint_pss_restricted.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/allowed_pod.yaml
        assertions:
          - violations: no
      - name: example-disallowed-empty
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed_empty.yaml
        assertions:
          - violations: yes
      - name: example-allowed-localhost
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/allowed_localhost.yaml
        assertions:
          - violations: no
      - name: example-disallowed-undefined
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed_undefined.yaml
        assertions:
          - violations: yes
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-ephemeral
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed_ephemeral.yaml
        assertions:
          - violations: yes
      - name: example-disallowed-multi
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/pss_restricted/disallowed_multi.yaml
        assertions:
          - violations: yes

  - name: security-policy
    template: ../../templates/security/allowed-seccomp.yaml
    constraint: constraint_security_policy.yaml
    cases:
      - name: example-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/security_policy/allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/security_policy/disallowed.yaml
        assertions:
          - violations: yes
